--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+<ul>
+    <li><a href="forbesjo.github.io/leaflet">Leaflet</a></li>
+</ul>
 </body>
 </html>
