--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 <ul>
-    <li><a href="forbesjo.github.io/leaflet">Leaflet</a></li>
+    <li><a href="../leaflet">Leaflet</a></li>
 </ul>
 </body>
 </html>
